syntax = "proto2";

enum MicrocontrollerType {
    MC_UNKNOWN = 0;
    MC_ATMEGA328P = 1;
}

enum DeviceType {
    DT_UNKNOWN = 0;
    DT_RELAY = 1;
    DT_AC_SENSOR = 2;
}

enum RadioId {
    RID_UNKNOWN = 0;
    RID_NRF24 = 1;
    RID_WIFI = 2;
}

enum SensorUnits {
    SU_UNKNOWN = 0;
    SU_MA = 1;
    SU_CELSIUS_DEGREE = 2;
    SU_FAHRENHEIT_DEGREE = 3;
    SU_KELVIN_DEGREE = 4;
    SU_BOOL = 5;
    SU_RELAYSTATUS = 6;
}

enum SensorCommandType {
    SCT_UNKNOWN = 0;
    SCT_TOGGLE = 1;
}

message RemoteDevUniqueId {
    required RadioId radio_id = 1;
    required uint32 id32 = 2;
}

message RemoteDevHeader {
    required uint32 transaction_id = 1;
    required RemoteDevUniqueId unique_id = 2;
}

message SensorData {
    required SensorUnits unit = 1;
    required int32 value = 2;
}

message SensorCommand {
    required SensorCommandType command = 1;
    required int32 data = 2;
}

message RemoteDevData {
    optional SensorData sensor_data = 1;
    optional SensorCommand sensor_command = 2;
}

message RemoteDevMessage {
    required RemoteDevHeader header = 1;
    repeated RemoteDevData data = 2;
}
